--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_scrap_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_scrap_mo.html
@@ -153,8 +153,8 @@
                     <div class="mypage_search_wrap">
                         <div class="search width100per">
                             <label for="search_input" class="hidden">검색</label>
-                            <input type="text" id="search_input" placeholder="검색어를 입력해 주세요.">
-                            <button class="btn_mypage_search right20"></button>                           
+                            <input type="text" id="search_input" placeholder="검색어를 입력해 주세요.">                            
+                            <button class="btn_mypage_scrapfollowing_search"></button>
                         </div>
                     </div>
                     <div class="mypage_tap_wrap">
