--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff_mo.html
@@ -165,9 +165,9 @@
                             <li>창작품(50)</li>
                             <li class="bg_no"><img src="/resources/img/img_new/ico_tap_setting.png" alt=""> 게시글 관리</li>
                         </ul>
-                    </div>
+                    </div>                    
                     <div class="mypage_select_wrap">
-                        <div class="sel_sorting right170">
+                        <div class="sel_sorting">
                             <select name="" id="">
                                 <option value="">정렬</option>
                                 <option value="">최신순</option>
@@ -176,7 +176,7 @@
                                 <option value="">과거 순</option>
                             </select>
                         </div>
-                        <div class="sel_form right0">
+                        <div class="sel_form">
                             <select name="" id="">
                                 <option value="">형태</option>
                                 <option value="">평면</option>
@@ -185,7 +185,7 @@
                                 <option value="">공예</option>
                             </select>
                         </div>
-                    </div>                    
+                    </div>
                     <div class="mypage_showingoff_contents_wrap">
                         <div class="mypage_showingoff_contents_row">
                             <ul>
