--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage_mo.html
@@ -126,8 +126,8 @@
                                 ※ 캔버스 규격을 기준으로 측정해주세요.<br>
                                 ※ 사이즈 단위는 cm 입니다.                            
                             </p>
-                            <p class="question_mark">
-                                <label for="picSize" class="pl13">호수</label>                                
+                            <p class="question_mark">                                
+                                <label for="picSize">호수</label>
                                 <input type="text" id="picSize" name="" required placeholder=""><a href="#"><img src="/resources/img/img_new/ico_quest_mark.png" alt=""></a>
                             </p>
                             <p>
@@ -180,8 +180,8 @@
                         <div class="btn_add"><button>+ 추가하기</button></div>
                         <form action="" method="" id="" name="">
                             <div class="add_area">  
-                                <span class="vh"><strong>*</strong>추가영역</span>                                  
-                                <ul class="width82per">
+                                <span class="vh"><strong>*</strong>추가영역</span>
+                                <ul>
                                     <li>                                            
                                         <div class="pic_movie">                                            
                                             <div class="icon_modify_box">
@@ -195,14 +195,14 @@
                                             <div class="area"><img src="/resources/img/img_new/sample_registration_pic.jpg" alt=""></div>
                                         </div>
                                     </li>
-                                    <li class="width66per">
+                                    <li>
                                         <div class="picmovie_form">
                                             <input type="text" id="" name="" required placeholder="제목">
                                             <textarea cols="50" rows="10" placeholder="내용 입력하기"></textarea>
                                             <div class="keyword"><a href="#" class="box"><span># 딜링아트 <img src="/resources/img/img_new/ico_keyword_close.png" alt=""></span></a><a href="#"><span># 키워드</span></a></div>
                                         </div>                                        
                                     </li>
-                                </ul>                                
+                                </ul>
                             </div>
                         </form>
                         <form action="" method="" id="" name="">
