--- a/src/main/resources/templates/thymeleaf/fo/myPage/search__collection_creation_detailpage_sold_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/search__collection_creation_detailpage_sold_mo.html
@@ -105,16 +105,16 @@
                     <div class="works_info_left">
                         <div class="contents_box">
                             <div class="big_img">
-                                <img src="/resources/img/img_new/sample_works_info_bimg00.jpg" alt="">
+                                <img src="/resources/img/mypage/sample_works_info_bimg00.jpg" alt="">
                             </div>
                             <div class="small_img">
-                                <img src="/resources/img/img_new/sample_works_info_bimg00.jpg" alt="">
-                                <img src="/resources/img/img_new/sample_works_info_bimg00.jpg" alt="">
-                                <img src="/resources/img/img_new/sample_works_info_bimg00.jpg" alt="">
-                                <img src="/resources/img/img_new/sample_works_info_bimg00.jpg" alt="">
-                                <img src="/resources/img/img_new/sample_works_info_bimg00.jpg" alt="">
-                                <img src="/resources/img/img_new/sample_works_info_bimg00.jpg" alt="">
-                                <img src="/resources/img/img_new/sample_works_info_bimg00.jpg" alt="">
+                                <img src="/resources/img/mypage/sample_works_info_bimg00.jpg" alt="">
+                                <img src="/resources/img/mypage/sample_works_info_bimg00.jpg" alt="">
+                                <img src="/resources/img/mypage/sample_works_info_bimg00.jpg" alt="">
+                                <img src="/resources/img/mypage/sample_works_info_bimg00.jpg" alt="">
+                                <img src="/resources/img/mypage/sample_works_info_bimg00.jpg" alt="">
+                                <img src="/resources/img/mypage/sample_works_info_bimg00.jpg" alt="">
+                                <img src="/resources/img/mypage/sample_works_info_bimg00.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         <div class="user_wrap mt30">
                             <div class="user">
                                 <ul>
-                                    <li class="pt5"><img src="/resources/img/img_new/ico_dauser.png" alt=""></li>
+                                    <li class="pt5"><img src="/resources/img/mypage/ico_dauser.png" alt=""></li>
                                     <li class="user_name pr10"><span>딜링아트</span></li>
                                     <li class="mem_type"><span class="ml0">컬렉터</span></li>
                                 </ul>
@@ -163,7 +163,7 @@
                                 <tr>
                                     <th>호수</th>
                                     <td>4 
-                                    <img src="/resources/img/img_new/ico_worksInfo_quest_mark.png" style="cursor:pointer;vertical-align: bottom;margin-left: 5px;" onclick="openLakeHelp()"></td>
+                                    <img src="/resources/img/mypage/ico_worksInfo_quest_mark.png" style="cursor:pointer;vertical-align: bottom;margin-left: 5px;" onclick="openLakeHelp()"></td>
                                 </tr>
                                 <tr>
                                     <th>판매 여부</th>                                    
@@ -183,9 +183,40 @@
 							    </tr>
 						    </tbody>
                         </table>
+                        <div class="selling_price">
+                            <table class="tstyle2">
+                                <tbody>
+                                    <tr>
+                                        <th>
+                                            <div class="tsc-1">
+                                                <img src="/resources/img/mypage/check-off.jpg"><span id="spn_dealStrtPrc">판매가</span>
+                                            </div>
+                                        </th>
+                                        <td>1,000,000 KRW</td>
+                                    </tr>                                    
+                                    <tr>
+                                        <th>
+                                            <div class="tsc-1">
+                                                <img src="/resources/img/mypage/check-off.jpg"><span id="spn_period">판매기간</span>
+                                            </div>
+                                        </th>
+                                        <td>2023.06.29 10:59 ~ 2023.07.20 10:00</td>
+                                    </tr>
+                                    <tr>
+                                        <th>
+                                            <div class="tsc-1">
+                                                <img src="/resources/img/mypage/check-off.jpg"><span>남은시간</span>
+                                            </div>
+                                        </th>
+                                        <td id="dealCount">6 일 22 : 56 : 40</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                         <div class="btn_worksInfo_wrap mt30">
-                            <button class="width78per">판매 제안하기</button>
-                            <button class="btn_list width20per ml10">목록</button>
+                            <button class="width32per">구매하기</button>
+                            <button class="width32per ml7">요청하기</button>
+                            <button class="btn_list width32per ml7">목록</button>
                         </div>
                     </div>
                 </div>
@@ -193,7 +224,7 @@
                 <div class="contents_showingoff_wrap">
                     <div class="showingoff_con_left">
                         <div class="img">
-                            <img src="/resources/img/img_new/sample_showingoff00.jpg" alt="">
+                            <img src="/resources/img/mypage/sample_showingoff00.jpg" alt="">
                         </div>
                         <div class="con_r">
                             <h4>컬린이의 도전</h4>
@@ -211,7 +242,7 @@
                     </div>
                     <div class="showingoff_con_right">
                         <div class="img">
-                            <img src="/resources/img/img_new/sample_showingoff00.jpg" alt="">
+                            <img src="/resources/img/mypage/sample_showingoff00.jpg" alt="">
                         </div>
                         <div class="con_r">
                             <h4>컬린이의 도전</h4>
@@ -233,7 +264,7 @@
                 <h2 class="mt50">작가정보</h2>
                 <div class="artist_info_wrap">
                     <div class="artist_info_left">
-                        <img src="/resources/img/img_new/sample_artistInfo_photo00.jpg" alt="">
+                        <img src="/resources/img/mypage/sample_artistInfo_photo00.jpg" alt="">
                     </div>
                     <div class="artist_info_right">
                         <span class="artist_name">이미소 (Lee Mi-so)</span>
@@ -251,28 +282,28 @@
                 </div>
                 <div class="artist_contents">
                     <div class="contents_tit">
-                        <h4>회원(닉네임)님의 다른 작품</h4>
+                        <h4>지금 핫한 거래</h4>
                         <button>+더보기</button>
                     </div>
                     <div class="swipe_box">
                         <div class="box_wrap">
                             <div class="pic_box00">
                                 <a href="#">
-                                    <img src="/resources/img/img_new/sample_works_info_bimg00.jpg" alt="">
+                                    <img src="/resources/img/mypage/sample_works_info_bimg00.jpg" alt="">
                                 </a>
                             </div>
                         </div>
                         <div class="box_wrap">
                             <div class="pic_box00">
                                 <a href="#">
-                                    <img src="/resources/img/img_new/sample_works_info_bimg00.jpg" alt="">
+                                    <img src="/resources/img/mypage/sample_works_info_bimg00.jpg" alt="">
                                 </a>
                             </div>
                         </div>
                         <div class="box_wrap">
                             <div class="pic_box00">
                                 <a href="#">
-                                    <img src="/resources/img/img_new/sample_works_info_bimg00.jpg" alt="">
+                                    <img src="/resources/img/mypage/sample_works_info_bimg00.jpg" alt="">
                                 </a>
                             </div>
                         </div>
