--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -16,7 +16,7 @@
 					<div class="footer-icon">
 						<!-- <a href="javascript:fnModalAlert();"><img src="/resources/img/sns-f.jpg" /></a>
 						<a href="javascript:fnModalAlert();"><img src="/resources/img/sns-t.jpg" /></a> -->
-						<a href="https://www.instagram.com/dealing_art/" target="_blank"><img src="/resources/img/sns-i.jpg" /></a>
+						<a href="https://www.instagram.com/dealing_art/" target="_blank"><img src="/resources/img/img_new/ico_footer_instagram.png" /></a>
 					</div>
 				</div>
 				
@@ -37,6 +37,20 @@
 							<!-- <li class="af-dn">개인정보관리책임자</li> 
 							<li> - 이영중(help@dealing-art.com) </li> -->
 						</ol>
+					</div>
+					<div class="newsletter_wrap">
+						<div class="tit">뉴스레터 구독하기</div>
+						<form action="" method="" id="" name="">
+                            <legend>뉴스레터 구독하기 입력 폼</legend>
+                            <p>
+                                <label for="newsletterName">이름</label>
+                                <input type="text" id="newsletterName" name="" required placeholder="">
+                            </p>
+							<p>
+                                <label for="newsletter_email">이메일</label>
+                                <input type="text" id="newsletterEmail" name="" required placeholder="">
+                            </p>
+						</form>
 					</div>
 				</div>
 				
@@ -69,6 +83,20 @@
 							<li class="af-dn">개인정보관리책임자 : 이영중(privacy@dealing-art.com)</li> 
 							<!-- <li> - 이영중(help@dealing-art.com)</li> -->
 						</ol>
+					</div>
+					<div class="newsletter_wrap">
+						<div class="tit">뉴스레터 구독하기</div>
+						<form action="" method="" id="" name="">
+                            <legend>뉴스레터 구독하기 입력 폼</legend>
+                            <p>
+                                <label for="newsletterName">이름</label>
+                                <input type="text" id="newsletterName" name="" required placeholder="">
+                            </p>
+							<p>
+                                <label for="newsletter_email">이메일</label>
+                                <input type="text" id="newsletterEmail" name="" required placeholder="">
+                            </p>
+						</form>
 					</div>
 				</div>
 			</div>
