--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_knowhow_page.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_knowhow_page.html
@@ -112,10 +112,7 @@
                     </select>
                 </div>
             </div>
-            <!-- <div class="mypage_contents pt50"> -->
-            <!-- mobile html 시작 -->
-            <div class="mypage_contents">
-            <!-- mobile html 끝 -->               
+            <div class="mypage_contents pt50">
                 <div class="mypage_collectcreate_wrap">                    
                     <div class="third">
                         <form action="" method="" id="" name="">
