--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_mo.html
@@ -165,9 +165,9 @@
                             <li class="bg_no"></li>
                             <li class="bg_no"><img src="/resources/img/img_new/ico_tap_setting.png" alt=""> 게시글 관리</li>
                         </ul>
-                    </div>
+                    </div>                    
                     <div class="mypage_select_wrap">
-                        <div class="sel_sorting right340">
+                        <div class="sel_sorting width34per">
                             <select name="" id="">
                                 <option value="">정렬</option>
                                 <option value="">최신순</option>
@@ -176,28 +176,28 @@
                                 <option value="">과거 순</option>
                             </select>
                         </div>
-                        <div class="sel_area right170">
+                        <div class="sel_area width33per">
                             <select name="" id="">
                                 <option value="">지역</option>
                             </select>
                         </div>
-                        <div class="sel_sortation right0">
+                        <div class="sel_sortation width33per">
                             <select name="" id="">
                                 <option value="">구분</option>
                             </select>
                         </div>
-                    </div> 
+                    </div>
                     <div class="mypage_exhint_contents_wrap">
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -222,14 +222,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -254,14 +254,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -286,14 +286,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -318,14 +318,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -350,14 +350,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -382,14 +382,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -414,14 +414,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -446,14 +446,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -478,14 +478,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
