--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_mo.html
@@ -99,7 +99,7 @@
 	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
     <div id="container">
         <div class="mypage_wrap">
-            <h2>전시후기/소개</h2>
+            <h2>이슈</h2>
             <div class="mypage_contents">
                 <div class="contents_left">
                   <div class="myinfo_wrap">
@@ -165,39 +165,18 @@
                             <li class="bg_no"></li>
                             <li class="bg_no"><img src="/resources/img/img_new/ico_tap_setting.png" alt=""> 게시글 관리</li>
                         </ul>
-                    </div>
-                    <div class="mypage_select_wrap">
-                        <div class="sel_sorting right340">
-                            <select name="" id="">
-                                <option value="">정렬</option>
-                                <option value="">최신순</option>
-                                <option value="">최근 인기 순</option>
-                                <option value="">역대 인기 순</option>
-                                <option value="">과거 순</option>
-                            </select>
-                        </div>
-                        <div class="sel_area right170">
-                            <select name="" id="">
-                                <option value="">지역</option>
-                            </select>
-                        </div>
-                        <div class="sel_sortation right0">
-                            <select name="" id="">
-                                <option value="">구분</option>
-                            </select>
-                        </div>
-                    </div> 
-                    <div class="mypage_exhint_contents_wrap">
+                    </div>                    
+                    <div class="mypage_exhint_contents_wrap mt30">
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -222,14 +201,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -254,14 +233,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -286,14 +265,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -318,14 +297,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -350,14 +329,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -382,14 +361,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -414,14 +393,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -446,14 +425,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -478,14 +457,14 @@
                         </div>
                         <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
-                            <div class="contents width75per">
+                            <div class="contents">
                                 <ul>
                                     <li>
                                         <div class="tit">
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt20 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
