--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_myworks_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_myworks_mo.html
@@ -99,7 +99,7 @@
 	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
     <div id="container">
         <div class="mypage_wrap">
-            <h2>스크랩</h2>
+            <h2>나의 작품</h2>
             <div class="mypage_contents">
                 <div class="contents_left">
                   <div class="myinfo_wrap">
@@ -115,9 +115,9 @@
                     </div>
                     <div class="icon_box">
                       <ul>
-                        <li><p class="ico_scrap"></p>스크랩<br><span>99</span></li>
-                        <li><p class="ico_good"></p>좋아요<br><span>99</span></li>
-                        <li><p class="ico_alarm"></p>알림<br><span>99</span></li>
+                          <li><p class="ico_scrap"></p>스크랩<br><span>99</span></li>
+                          <li><p class="ico_good"></p>좋아요<br><span>99</span></li>
+                          <li><p class="ico_alarm"></p>알림<br><span>99</span></li>
                       </ul>
                     </div>
                     <div class="icon_sns_box">
@@ -151,22 +151,41 @@
                 </div>
                 <div class="contents_right">
                     <div class="mypage_search_wrap">
-                        <div class="search width100per">
+                        <div class="search">
                             <label for="search_input" class="hidden">검색</label>
                             <input type="text" id="search_input" placeholder="검색어를 입력해 주세요.">
-                            <button class="btn_mypage_search right20"></button>                           
-                        </div>
+                            <button class="btn_mypage_search"></button>
+                          </div>
+                          <button class="btn_mypage_registering">등록하기</button>
                     </div>
                     <div class="mypage_tap_wrap">
-                        <ul class="tap_scrap">
-                            <li class="on bg_no">나의 작품(5)</li>
-                            <li>자랑하기(50)</li>
-                            <li>전시후기/소개(29)</li>
-                            <li>이슈(5)</li>
-                            <li>인사이트(5)</li>
-                            <li class="bg_no">아티스트 필름</li>
+                        <ul class="tap">
+                            <li class="on bg_no">전체(99)</li>
+                            <li>소장품(55)</li>
+                            <li>창작품(50)</li>
+                            <li class="bg_no"><img src="/resources/img/img_new/ico_tap_setting.png" alt=""> 작품관리</li>
                         </ul>
-                    </div>                    
+                    </div>
+                    <div class="mypage_select_wrap">
+                        <div class="sel_sorting">
+                            <select name="" id="">
+                                <option value="">정렬</option>
+                                <option value="">최신순</option>
+                                <option value="">최근 인기 순</option>
+                                <option value="">역대 인기 순</option>
+                                <option value="">과거 순</option>
+                            </select>
+                        </div>
+                        <div class="sel_form">
+                            <select name="" id="">
+                                <option value="">형태</option>
+                                <option value="">평면</option>
+                                <option value="">입체</option>
+                                <option value="">고미술</option>
+                                <option value="">공예</option>
+                            </select>
+                        </div>
+                    </div>
                     <div style="font-size: 28px;text-align: center;margin-top: 100px;">나의 작품 페이지 링크하기</div>
               </div>
             </div>
