communityMapper -> 정렬 조건 REG (등록일) 추가 community_home -> html 코드가 매거진 아티스트 html 태그로 덮어 씌워있어서 원상 복구시킴 exhint, showingoff -> comtSq 하드코딩 한 부분 삭제하고 다시 SqNumber(comtSq) 파라미터 받을 수 있게 변경

--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
@@ -122,8 +122,7 @@
     
     <script th:inline="javascript">
  	// 커뮤니티 순번
-	
- 	var comtSq = 59;
+	var comtSq = /*[[${param.SqNumber[0]}]]*/ 'default';
  	var mbr = /*[[${exhibit.mbrSq}]]*/ 'default';
  	var comt = /*[[${exhibit}]]*/ 'default';
  	var otherComt = /*[[${otherComt}]]*/ 'default';
