--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
@@ -147,8 +147,7 @@
 		     }
 		});
 		
-    	
-    	var comtSq = 52; // 커뮤니티 순번
+		var comtSq = /*[[${param.SqNumber[0]}]]*/ 'default';
     	var otherComt; // 작성자의 다른 자랑하기
     	var showOffList;
 		var showOff;
