커뮤니티 자랑하기, 전기후기/소개 디자인 수정 css 수정

--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -1968,7 +1968,9 @@ input[type="radio"]:checked + label span {
     vertical-align: middle;
 }
 .ba-btn1{color: #ffffff;
-    background-color: #e9625c;}
+    background-color: #e9625c;
+    vertical-align: middle;
+}
 .ba-btn2{
     border: #e9625c 3px solid;
     color: #e9625c;
