--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
@@ -113,7 +113,7 @@
         <div class="artist_contents">
 			
         </div>
-        <div class="comments_box_wrap max-1500" id="commentBox">
+        <div class="comments_box_wrap max-1500 fs_2rem" id="commentBox">
 			
         </div>
     </div>
@@ -187,7 +187,7 @@
 	    strHtml += '    	<span>'+ comt.comtExhibitRegionCdNm +'</span>';
 	    strHtml += '    	<span>'+ comt.comtExhibitTypCdNm +'</span>';
 	    strHtml += '    </p>';
-	   	strHtml += '    <p>';
+	   	strHtml += '    <p class="fs_2rem">';
 	    
 	   	if(null != comt.comtKeywrd){
 		   	// 키워드 for문 돌리기
