--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -78,7 +78,9 @@ html, body{font-size: calc(100vw / 75);}
 	display:none;
 }
 
-.max-1500{max-width: 62.8rem;width:100%;margin:0 auto;}
+/* .max-1500{max-width: 62.8rem;width:100%;margin:0 auto;} */
+.max-1500{width:100%;margin:0 auto;}
+
 .cont-title{
     margin-top: 7.9rem;
     position: relative;
@@ -1845,16 +1847,16 @@ input[type="radio"]:checked + label span {
     content: "";
     position: absolute;
     left: 0px;
-    width: 0.8rem;
-    height: 5rem;
+    width: 1.2rem;
+    height: 3.5rem;
     background-color: rgb(233, 98, 92);
     top: 50%;
     transform: translateY(-50%);
 }
 
 .sub-title h3 {
-    font-size: 3.6rem;
-    padding-left: 3.9rem;
+    font-size: 3.25rem;
+    padding-left: 3rem;
     display: inline-block;
     position: relative;
     font-weight: 600;
@@ -2075,9 +2077,9 @@ input[type="radio"]:checked + label span {
 }
 .su-r p{}
 .su-r p.sup-1{
-    font-size: 5rem;
+    font-size: 3.25rem;
     color: #333333;
-    font-weight: 600;
+    font-weight: 500;
     height: 7.5rem;
     display: inline-block;
 }
@@ -7250,15 +7252,15 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 
 .works_showingoff_detail_page_wrap{margin-bottom: 200px;}
 .works_showingoff_detail_page_wrap .picture{padding: 80px 0;display: flex;justify-content: center;}
-.works_showingoff_detail_page_wrap h3{font-size: 2.875rem;font-weight: 500;padding-bottom: 30px;}
+.works_showingoff_detail_page_wrap h3{font-size: 2.875rem;font-weight: 500;padding-bottom: 20px;}
 
-.works_showingoff_detail_page_wrap .user_wrap{position: relative;border-top: 1px solid #e8e8e8;border-bottom: 1px solid #e8e8e8;}
+.works_showingoff_detail_page_wrap .user_wrap{position: relative;border-top: 1px solid #e8e8e8;border-bottom: 1px solid #e8e8e8;display: flex;flex-direction: column;align-items: center;}
 .works_showingoff_detail_page_wrap .user_wrap:after{content: "";display: block;clear: both;}
 .works_showingoff_detail_page_wrap .user_wrap .user{float: left;margin: 7px 16px;}
 .works_showingoff_detail_page_wrap .user_wrap .user ul .user_name{padding: 20px;}
 .works_showingoff_detail_page_wrap .user_wrap .icon_box{float: right;}
 .works_showingoff_detail_page_wrap .user_wrap .user_name span{background: #8f8f8f;font-size: 2rem;font-weight: 500;color: #ffffff;padding: 3px 8px;border-radius: 5px;display: inline-block;}
-.works_showingoff_detail_page_wrap .user_wrap .mem_type{text-align: center;font-size: 16px;font-weight: 300;padding: 23px 0;}
+.works_showingoff_detail_page_wrap .user_wrap .mem_type{text-align: center;font-size: 2rem;font-weight: 300;padding: 23px 0;}
 .works_showingoff_detail_page_wrap .user_wrap .mem_type span{font-size: 2rem;font-weight: bold;border: 1px solid #939393;padding: 5px 30px;border-radius: 50px;background: #dbdbdb;margin-left: 10px;}
 .works_showingoff_detail_page_wrap .user_wrap .following{padding: 16px 0 14px 10px;}
 .works_showingoff_detail_page_wrap .user_wrap .following button{background: #608bc6;font-size: 16px;font-weight: 700;color: #ffffff;padding: 8px 14px 7px;border-radius: 5px;margin-top: 1px;}
@@ -7268,18 +7270,18 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .works_showingoff_detail_page_wrap .icon_box{background: #ffffff;}
 .works_showingoff_detail_page_wrap .icon_box:after{content: "";display: block;clear: both;}
 .works_showingoff_detail_page_wrap .icon_box ul li{float: left;text-align: center;font-size: 2rem;padding: 5px 15px;}
-.works_showingoff_detail_page_wrap .icon_box ul .time{padding-top: 30px;}
-.works_showingoff_detail_page_wrap .icon_box ul .day{padding-top: 30px;}
+.works_showingoff_detail_page_wrap .icon_box ul .time{width: 10rem;}
+.works_showingoff_detail_page_wrap .icon_box ul .day{padding-top: 1.625rem;width: 10rem;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_good{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/img_new/ico_good.png") 50% 50% no-repeat;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_scrap{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/img_new/ico_scrap.png") 50% 50% no-repeat;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_hits{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_comments{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/img_new/ico_comments.png") 50% 50% no-repeat;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_report{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/img_new/ico_report.png") 50% 50% no-repeat;}
 
-.works_showingoff_detail_page_wrap .picture_detail{display: flex;justify-content: center;flex-direction: column;align-items: center;border-bottom: 1px solid #e8e8e8;}
+.works_showingoff_detail_page_wrap .picture_detail{display: flex;justify-content: center;flex-direction: column;align-items: center;border-bottom: 1px solid #e8e8e8;padding: 50px 0;}
 .works_showingoff_detail_page_wrap .picture_detail .method{padding: 50px 0;font-size: 20px;font-weight: 500;}
 .works_showingoff_detail_page_wrap .picture_detail .small_tit{padding: 50px 0;font-size: 28px;font-weight: 700;}
-.works_showingoff_detail_page_wrap .picture_detail p{padding: 30px 0 50px;font-size: 16px;font-weight: 300;}
+.works_showingoff_detail_page_wrap .picture_detail p{padding: 10px 0;font-size: 2rem;font-weight: 300;}
 
 .works_info_wrap{margin-top: 30px;}
 .works_info_wrap:after{content: "";display: block;clear: both;}
@@ -7345,7 +7347,7 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .selling_price .tstyle2 .tsc-1 span{font-size: 14px;display: inline-block;color: #111111;font-weight: 500;padding-left: 10px;vertical-align: middle;}
 
 .gallery_keyword_wrap{display: flex;justify-content: space-between;margin-top: 10px;}
-.gallery_keyword_wrap span{background: #8f8f8f;font-size: 14px;font-weight: 300;color: #ffffff;padding: 3px 10px;border-radius: 5px;}
+.gallery_keyword_wrap span{background: #8f8f8f;font-size: 1.875rem;font-weight: 300;color: #ffffff;padding: 3px 10px;border-radius: 5px;}
 .gallery_keyword_wrap p a{margin-left: 10px;}
 
 .works_showingoff_detail_page_wrap .artist_contents{background-color: #f9f9f9;margin-top: 150px;position: relative;}
@@ -7528,3 +7530,15 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .magazine9_wrap .artist_update_wrap .tit_wrap{position: relative;}
 .magazine9_wrap .artist_update_wrap .tit_wrap h2{font-size: 2.625rem;letter-spacing: -1.5px;}
 .magazine9_wrap .artist_update_wrap .tit_wrap .btn_more{width: 76px;font-size: 2rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 1px no-repeat;text-align: left;position: absolute;top: 0;right: 10px;}
+
+/* 23.08.17 박재현 내용 추가 */
+.btn_worksInfo_wrap button{width: 100%;font-size: 2.25rem;color: #ffffff;background: #ea655b;margin-top: 30px; padding: 16px 0;}
+.btn_more{width: 76px;font-size: 2.25rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 3px no-repeat;text-align: left;position: absolute;top: 47%;right: 0;}
+.comments_box_wrap form p input{width: 100%;height: 44px;border: 1px solid #d6d6d6;border-radius: 5px;padding: 10px 20px;margin-bottom: 10px;}
+.comments_box_wrap form p label{display: block;float: left;font-size: 2.125rem;font-weight: 500;color: #111111;width: 175px;padding-top: 11px;}
+.comments_box_wrap .comments_box .user_wrap .user_name span{font-size: 2rem;font-weight: 500;color: #111111;padding: 3px 8px;border-radius: 5px;display: inline-block;}
+
+
+
+
+
